--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -68,11 +68,133 @@
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width: 320px) {
   /* Styles */
+
+  /***************************
+	/* +Header
+	****************************/
+  .header {
+    padding: 5rem 1rem;
+  }
+
+  .header__block--small {
+    font-size: 1.5rem;
+  }
+
+  .header__block--hero {
+    font-size: 2.3rem;
+  }
+
+  .header__block > nav ul li {
+    display: inline-block;
+    font-size: 1.4rem;
+  }
+
+  /***************************
+  /* +Form
+  ****************************/
+  .form {
+    padding: 1rem;
+  }
+
+  .form__part {
+    flex-direction: column;
+  }
+
+  .form__part--label {
+    flex: 0 0 100%;
+  }
+
+  .form__part--fields {
+    flex: 1;
+  }
+
+  .form__group {
+    margin: 1rem 0;
+  }
+
+  .fields {
+    flex-direction: column;
+  }
+
+  .form__group--1 {
+    flex-direction: column;
+  }
+
+  .form__group--1 > .row * {
+    flex: 1;
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
+
+  .fields .form__group {
+    max-width: 100vw;
+  }
+
+  .hr__line {
+    margin: 2rem -1rem;
+  }
 }
 
 /* iPads (portrait and landscape) ----------- */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+@media only screen and (min-device-width: 480px) and (max-device-width: 768px) {
   /* Styles */
+
+  /***************************
+	/* +Header
+	****************************/
+  .header {
+    padding: 7rem 2rem;
+  }
+
+  .header__block--small {
+    font-size: 1.7rem;
+  }
+
+  .header__block--hero {
+    font-size: 2.4rem;
+  }
+
+  .header__block > nav ul li {
+    display: inline-block;
+    font-size: 1.5rem;
+  }
+
+  /***************************
+  /* +Form
+  ****************************/
+  .form__part {
+    flex-direction: column;
+  }
+
+  .form__part--label {
+    flex: 0 0 100%;
+  }
+
+  .form__part--fields {
+    flex: 1;
+  }
+
+  .form__group {
+    margin: 1rem 0;
+  }
+
+  .fields {
+    flex-direction: column;
+  }
+
+  .form__group--1 {
+    flex-direction: column;
+  }
+
+  .form__group--1 > .row * {
+    flex: 1;
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
+
+  .fields .form__group {
+    max-width: 100vw;
+  }
 }
 
 /* iPads (landscape) ----------- */
@@ -83,6 +205,12 @@
 /* iPads (portrait) ----------- */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
   /* Styles */
+  /***************************
+  /* +Header
+  ****************************/
+  .header {
+    padding: 7rem 3rem;
+  }
 }
 
 /* Desktops and laptops ----------- */
