--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -58,6 +58,36 @@
   .fields .form__group {
     max-width: 100vw;
   }
+
+  /***************************
+  /* +Contact Page
+  ****************************/
+  .contact {
+    flex-direction: column;
+    width: 100%;
+    height: 10rem;
+    padding: 0 2rem 0 2rem;
+    margin-bottom: 60rem;
+  }
+
+  .contact__img--img {
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+
+  .contact__information {
+    border-top-left-radius: 0rem;
+    border-top-right-radius: 0rem;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    transform: trnslateY(2rem);
+    -webkit-transform: trnslateY(2rem);
+    -moz-transform: trnslateY(2rem);
+    -ms-transform: trnslateY(2rem);
+    -o-transform: trnslateY(2rem);
+  }
 }
 
 /* Smartphones (landscape) ----------- */
@@ -133,6 +163,36 @@
   .hr__line {
     margin: 2rem -1rem;
   }
+
+  /***************************
+  /* +Contact Page
+  ****************************/
+  .contact {
+    flex-direction: column;
+    width: 100%;
+    height: 10rem;
+    padding: 0 2rem 0 2rem;
+    margin-bottom: 60rem;
+  }
+
+  .contact__img--img {
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+
+  .contact__information {
+    border-top-left-radius: 0rem;
+    border-top-right-radius: 0rem;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    transform: trnslateY(2rem);
+    -webkit-transform: trnslateY(2rem);
+    -moz-transform: trnslateY(2rem);
+    -ms-transform: trnslateY(2rem);
+    -o-transform: trnslateY(2rem);
+  }
 }
 
 /* iPads (portrait and landscape) ----------- */
@@ -195,6 +255,30 @@
   .fields .form__group {
     max-width: 100vw;
   }
+
+  /***************************
+  /* +Contact Page
+  ****************************/
+  .contact {
+    width: 100%;
+    padding: 0 2rem 0 2rem;
+    margin-bottom: 60rem;
+    font-size: 1.5rem;
+  }
+
+  .contact__img {
+    flex: 0 0 45%;
+  }
+
+  .contact__img--img {
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+  }
+
+  .contact__information {
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+  }
 }
 
 /* iPads (landscape) ----------- */
@@ -210,6 +294,16 @@
   ****************************/
   .header {
     padding: 7rem 3rem;
+  }
+
+  /***************************
+  /* +Contact Page
+  ****************************/
+  .contact {
+    width: 100%;
+    padding: 0 2rem 0 2rem;
+    margin-bottom: 60rem;
+    font-size: 1.5rem;
   }
 }
 
